--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 
   <h1>Welcome to My Web Page</h1>
 
-  <p>
-  University of Virginia
-  </p>
+<p>
+I go to the University of Virginia
+</p>
   
 </body>  
 </html>
