--- a/index.html
+++ b/index.html
@@ -1,14 +1,8 @@
 <html>
-<head>
-  <title>Athena Vo</title>
-</head>
-<body>
-
-  <h1>Welcome to My Web Page</h1>
-
-  <p>
-  I go to the University of Virginia
-  </p>
-  
-</body>  
+  <head>
+    <title>My first web page</title>
+  </head>
+  <body>
+    
+  </body>
 </html>
