--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <title>My first web page</title>
   </head>
   <body>
-    
+    <p>
+      Instagram: @athenavo
+      Email: gwb9pe@virginia.edu
+      Github: athena12341235
+    </p>
   </body>
 </html>
