--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
   <head>
     <title>My first web page</title>
+    <style>
+      p {
+        font-weight: bold;
+      }   
+    </style>
   </head>
   <body>
     <p>
