--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     </style>
   </head>
   <body>
-    <p>
-      Instagram: @athenavo
-      Email: gwb9pe@virginia.edu
-      Github: athena12341235
+    <p>Instagram: athenavo</p>
+    <p>Email: gwb9pe@virginia.edu</p>
+    <p>Github: athena12341235</p>
     </p>
   </body>
 </html>
