--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale = 1">
     <title>My first web page</title>
     <style>
       p {
@@ -8,6 +9,8 @@
     </style>
   </head>
   <body>
+    <h1>Athena Vo</h1>
+    <h2>Social Media</h2>
     <p>Instagram: athenavo</p>
     <p>Email: gwb9pe@virginia.edu</p>
     <p>Github: athena12341235</p>
