--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
   </head>
   <body>
     <h1>Athena Vo</h1>
-    <h2>Social Media</h2>
+    <h2>Social Medias</h2>
     <p>Instagram: athenavo</p>
     <p>Email: gwb9pe@virginia.edu</p>
     <p>Github: athena12341235</p>
-    </p>
+    Line Break <br>
+    Line Break
   </body>
 </html>
