--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <h1>Athena Vo</h1>
     <h2>Social Medias</h2>
-    <p>Instagram: athenavo</p>
+    <p><i>Instagram: athenavo</i></p>
     <p>Email: gwb9pe@virginia.edu</p>
     <p>Github: athena12341235</p>
     Line Break <br>
