--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <h1>Athena Vo</h1>
     <h2>Social Medias</h2>
     <p><i>Instagram: athenavo</i></p>
-    <p>Email: gwb9pe@virginia.edu</p>
-    <p>Github: athena12341235</p>
+    <p><i>Email: gwb9pe@virginia.edu</i></p>
+    <p><i>Github: athena12341235</i></p>
     Line Break <br>
     Line Break
   </body>
