--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <h1>Athena Vo</h1>
     <h2>Social Medias</h2>
-    <p><i>Instagram: <a href="https://www.instagram.com/athenaavo/">athenavo</a></i></p>
+    <p><i>Instagram: <a href="https://www.instagram.com/athenaavo/" target="_blank">athenavo</a></i></p>
     <p><i>Email: gwb9pe@virginia.edu</i></p>
     <p><i>Github: athena12341235</i></p>
     Line Break <br>
