--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p><i>Email: gwb9pe@virginia.edu</i></p>
     <p><i>Github: athena12341235</i></p>
     Line Break <br>
-    Line Break
+    Line Break <br>
     <img src="bbe1392f-34fb-46a8-a83b-c59a47b2a5ec.jpeg" height="300" width="600">
   </body>
 </html>
