--- a/index.html
+++ b/index.html
@@ -17,5 +17,10 @@
     Line Break <br>
     Line Break <br>
     <img src="bbe1392f-34fb-46a8-a83b-c59a47b2a5ec.jpeg" height="152.9" width="229.5">
+    <ul>
+      <li>Engage, unite, and uplift the Vietnamese-American community at UVA</li>
+      <li>Serve the greater Vietnamese-American community in Virginia</li>
+      <li>Raise money for the Collective Philanthropy Project (CPP)</li>
+    </ul>
   </body>
 </html>
