--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </style>
   </head>
   <body>
-    <h1>Athena Vo</h1>
+    <h1 style="font-size: 26px">Athena Vo</h1>
     <h2>Social Medias</h2>
     <p><i>Instagram: <a href="https://www.instagram.com/athenaavo/" target="_blank">athenavo</a></i></p>
     <p><i>Email: gwb9pe@virginia.edu</i></p>
