--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <style>
       p {
         font-weight: bold;
-        background-color: #e5f8ff;
       }   
     </style>
   </head>
-  <body>
+  <body style="background-color:#e5f8ff">
     <h1 style="font-size: 50px">Athena Vo</h1>
     <h2>Social Medias</h2>
     <p><i>Instagram: <a href="https://www.instagram.com/athenaavo/" target="_blank">athenavo</a></i></p>
