--- a/index.html
+++ b/index.html
@@ -5,17 +5,25 @@
     <style>
       p {
         font-weight: bold;
-      }   
+      }
+      p.who_i_am {
+        font-size: var(--size-plarge);
+        font-weight: bold;
+        font-stretch: normal;
+        line-height: 1.4;
+        letter-spacing: normal;
     </style>
   </head>
-  <body style="background-color:#e5f8ff; font-family:Roboto Mono, monospace">
+  <body style="background-color:#e5f8ff; font-family:Roboto Mono">
     <h1 style="font-size: 50px">Athena Vo</h1>
     <h2>Social Medias</h2>
     <p><i>Instagram: <a href="https://www.instagram.com/athenaavo/" target="_blank">athenavo</a></i></p>
     <p><i>Email: gwb9pe@virginia.edu</i></p>
     <p><i>Github: athena12341235</i></p>
-    Line Break <br>
-    Line Break <br>
+    <p.who_i_am>
+      Who I Am <br>
+      Hi, I am Athena Vo. I am a second-year student at the University of Virginia. I am pursuing a major in Computer Science and a minor in Data Science. I like to code, journal, photograph, and travel.
+    </p.who_i_am>
     <img src="bbe1392f-34fb-46a8-a83b-c59a47b2a5ec.jpeg" height="152.9" width="229.5">
     <ul>
       <li>Engage, unite, and uplift the Vietnamese-American community at UVA</li>
