--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       }
     </style>
   </head>
-  <body style="background-color:#e5f8ff; font-family:Roboto Mono">
+  <body style="background-color:#e5f8ff; font-family:Ariel">
     <h1 style="font-size: 50px">Athena Vo</h1>
     <h2>Social Medias</h2>
     <p><i>Instagram: <a href="https://www.instagram.com/athenaavo/" target="_blank">athenavo</a></i></p>
