--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
       }
     </style>
   </head>
-  <body style="background-color:#e5f8ff; font-family:Arial">
+  <body style="background-color:#e5f8ff; font-family:Roboto Mono">
     <h1 style="font-size: 50px">Athena Vo</h1>
     <h2>Social Medias</h2>
-    <p><i>Instagram: <a href="https://www.instagram.com/athenaavo/" target="_blank">athenavo</a></i></p>
+    <p><i>Linkedin: <a href="https://www.linkedin.com/in/athena-vo/" target="_blank">athenavo</a></i></p>
     <p><i>Email: gwb9pe@virginia.edu</i></p>
     <p><i>Github: athena12341235</i></p>
       Who I Am <br>
