--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <p><i>Linkedin: <a href="https://www.linkedin.com/in/athena-vo/" target="_blank">athenavo</a></i></p>
     <p><i>Email: gwb9pe@virginia.edu</i></p>
     <p><i>Github: athena12341235</i></p>
-      Who I Am <br>
-      Hi, I am Athena Vo. I am a second-year student at the University of Virginia. I am pursuing a major in Computer Science and a minor in Data Science. I like to code, journal, photograph, and travel!
+    <h1><b>Who I Am</b></h1>
+    Hi, I am Athena Vo. I am a second-year student at the University of Virginia. I am pursuing a major in Computer Science and a minor in Data Science. I like to code, journal, photograph, and travel!
     <img src="bbe1392f-34fb-46a8-a83b-c59a47b2a5ec.jpeg" height="152.9" width="229.5">
     <ul>
       <li>Engage, unite, and uplift the Vietnamese-American community at UVA</li>
