--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
       <li>Serve the greater Vietnamese-American community in Virginia</li>
       <li>Raise money for the Collective Philanthropy Project (CPP)</li>
     </ul>
+    <footer style="background-color:#0c6b68"></footer>
   </body>
 </html>
