--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
       p {
         font-weight: bold;
       }
+      footer {
+        text-align: center;
+        padding: 3px;
+        background-color: #0c6b68;
+      }  
     </style>
   </head>
   <body style="background-color:#e5f8ff; font-family:Roboto Mono, monospace">
@@ -22,6 +27,10 @@
       <li>Serve the greater Vietnamese-American community in Virginia</li>
       <li>Raise money for the Collective Philanthropy Project (CPP)</li>
     </ul>
-    <footer style="background-color:#0c6b68"></footer>
+    <footer>
+      <p><i>Linkedin: <a href="https://www.linkedin.com/in/athena-vo/" target="_blank">athenavo</a></i></p>
+      <p><i>Email: gwb9pe@virginia.edu</i></p>
+      <p><i>Github: athena12341235</i></p>
+    </footer>
   </body>
 </html>
