--- a/index.html
+++ b/index.html
@@ -8,17 +8,12 @@
       }
       footer {
         text-align: center;
-        padding: 3px;
         background-color: #0c6b68;
       }  
     </style>
   </head>
   <body style="background-color:#e5f8ff; font-family:Roboto Mono, monospace">
     <h1 style="font-size: 50px">Athena Vo</h1>
-    <h2>Social Medias</h2>
-    <p><i>Linkedin: <a href="https://www.linkedin.com/in/athena-vo/" target="_blank">athenavo</a></i></p>
-    <p><i>Email: gwb9pe@virginia.edu</i></p>
-    <p><i>Github: athena12341235</i></p>
     <h2><b>Who I Am</b></h2>
     Hi, I am Athena Vo. I am a second-year student at the University of Virginia. I am pursuing a major in Computer Science and a minor in Data Science. I like to code, journal, photograph, and travel!<br>
     <img src="bbe1392f-34fb-46a8-a83b-c59a47b2a5ec.jpeg" height="152.9" width="229.5">
@@ -28,6 +23,7 @@
       <li>Raise money for the Collective Philanthropy Project (CPP)</li>
     </ul>
     <footer>
+      <h2>Social Links</h2>
       <p><i>Linkedin: <a href="https://www.linkedin.com/in/athena-vo/" target="_blank">athenavo</a></i></p>
       <p><i>Email: gwb9pe@virginia.edu</i></p>
       <p><i>Github: athena12341235</i></p>
