--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
         font-weight: bold;
       }
       footer {
+        margin-top: auto;
+        width: 100%;
         text-align: center;
         background-color: #0c6b68;
+        padding: 20px;
       }  
     </style>
   </head>
