--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <h2>Who I Am</h2>
     Hi, I am Athena Vo. I am a second-year student at the University of Virginia. I am pursuing a major in Computer Science and a minor in Data Science. I like to code, journal, photograph, and travel! Keep reading to learn more about me.<br>
     <img src="bbe1392f-34fb-46a8-a83b-c59a47b2a5ec.jpeg" height="152.9" width="229.5">
+    I am part of the Vietnamese Student Association @ UVA. I work to...
     <ul>
       <li>Engage, unite, and uplift the Vietnamese-American community at UVA</li>
       <li>Serve the greater Vietnamese-American community in Virginia</li>
