--- a/education.html
+++ b/education.html
@@ -2,5 +2,6 @@
   <title>Education</title>
   <body>
     <h1>This is my education page!</h1>
+    <a href="index.html">Return to Home Page</a>
   </body>
 </html>
