--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </style>
   </head>
   <body style="background-color:#e5f8ff; font-family:Roboto Mono, monospace">
+    <a href="education.html">Education</a>
     <h1 style="font-size: 50px">Athena Vo</h1>
     <h2>Who I Am</h2>
     Hi, I am Athena Vo. I am a second-year student at the University of Virginia. I am pursuing a major in Computer Science and a minor in Data Science. I like to code, journal, photograph, and travel! Keep reading to learn more about me.<br>
