--- a/education.html
+++ b/education.html
@@ -2,6 +2,13 @@
   <title>Education</title>
   <body>
     <h1>This is my education page!</h1>
-    <a href="index.html">Return to Home Page</a>
+    <a href="index.html">Return to Home Page</a><br>
+    <img src="bbe1392f-34fb-46a8-a83b-c59a47b2a5ec.jpeg" height="152.9" width="229.5"><br>
+    I am part of the Vietnamese Student Association @ UVA. I work to...
+    <ul>
+      <li>Engage, unite, and uplift the Vietnamese-American community at UVA</li>
+      <li>Serve the greater Vietnamese-American community in Virginia</li>
+      <li>Raise money for the Collective Philanthropy Project (CPP)</li>
+    </ul>
   </body>
 </html>
