--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
             <img src="Headshot.jpg" width="496.98" height="331.36">
           </div>
           <div class="about-col-2">
-            <h1>About Me</h1>
-            <p>Hi, I am Athena Vo. I am a second-year student at the University of Virginia. I am pursuing a major in Computer Science and a minor in Data Science. I like to code, journal, photograph, and travel! Keep reading to learn more about me.</p>
+            <h1>About Me</h1><br>
+            <p>Hi, I am Athena Vo. I am a second-year at the University of Virginia, pursuing a major in Computer Science
+            and a minor in Data Science. I am interested in software development and machine learning. </p>
           </div>
         </div>
       </div>
@@ -41,9 +42,9 @@
         <div class="row">
           <h1>Contact Me</h1>
           <div class="social-icons">
-            <a href="https://www.linkedin.com/in/athena-vo/" target="_blank"><img src="linkedin.svg"></i></a>Athena Vo
-            <a href="https://github.com/athena12341235" target="_blank"><img src="square-github.svg"></i></a>athena12341235
-            <a href=""><img src="envelope-solid.svg"></i></a>gwb9pe@virginia.edu
+            <a href="https://www.linkedin.com/in/athena-vo/" target="_blank"><img src="linkedin.svg" height="29.86" width="34.13"></i></a>Athena Vo
+            <a href="https://github.com/athena12341235" target="_blank"><img src="square-github.svg" height="29.86" width="34.13"></i></a>athena12341235
+            <a href=""><img src="envelope-solid.svg" height="34.13" width="34.13"></i></a>gwb9pe@virginia.edu
           </div>
         </div>
       </div>
