--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <li><a href="#">Extracurriculars</a></li>
             <li><a href="#">Projects</a></li>
             <li><a href="#">CV</a></li>
+            <li><a href="project3.1.html">Project 3.1</a></li>
           </ul>
         </nav>
         <div class="header-text">
