--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li><a href="#">CV</a></li>
             <li><a href="project3.1.html">Project 3.1</a></li>
             <li><a href="project3.2.html">Project 3.2</a></li>
+            <li><a href="project3.3.html">Project 3.3</a></li>
           </ul>
         </nav>
         <div class="header-text">
