--- a/education.html
+++ b/education.html
@@ -1,7 +1,7 @@
 <html>
   <title>Education</title>
   <body>
-    <h1>This is my education page!</h1>
+  <h1>This is my education page!</h1>
     <a href="index.html">Return to Home Page</a><br>
     <div id="carousel">
       <div id="images">
@@ -10,7 +10,7 @@
         <img src="EAF7DEDA-5956-4EF4-982C-8967AAD03428.jpeg" width = "300" height = "400">
       </div>
       <button class="Prev" onclick="moveSlide(-1)">&#10094;</button>
-      <button class="Next" onclick="moveSlide(1)">&#10095;</button>
+      <button class="Next" onclick="moveSlide(1); burstConfetti(this);">&#10095;</button>
     </div>
     I am part of the Vietnamese Student Association @ UVA. I work to...
     <ul>
@@ -18,6 +18,7 @@
       <li>Serve the greater Vietnamese-American community in Virginia</li>
       <li>Raise money for the Collective Philanthropy Project (CPP)</li>
     </ul>
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.3.2/dist/confetti.browser.min.js"></script>
   <script>
     let slideIndex = 0;
     showSlide(slideIndex);
@@ -39,6 +40,23 @@
         slides[i].style.display = "none";
       }
       slides[slideIndex].style.display = "block";
+    }
+
+    function burstConfetti(element) {
+      const rect = element.getBoundingClientRect();
+
+      const confettiSettings = {
+        target: 'canvas',
+        angle: 90,
+        spread: 70,
+        startVelocity: 40,
+        particleCount: 50,
+        origin: {
+          x: (rect.left + rect.right) / 2 / window.innerWidth,
+          y: (rect.top + rect.bottom) / 2 / window.innerHeight
+        }
+      };
+      confetti(confettiSettings);
     }
   </script>
   </body>
